Fixed modal position on mobile devices, removed input focus on new/edit item modals

--- a/SpacedRepetition/styles/main.css
+++ b/SpacedRepetition/styles/main.css
@@ -759,6 +759,9 @@ button.show-more span {
 
 
 @media screen and (max-width: 800px) {
+    .modal .content {
+        top: 0.5em;
+    }
     .category .category.active > .body {
         padding-left: 0;
         border: none;
